@@ -103,9 +103,11 @@ sub rec
 	my ($conn, $msg, $err) = @_;
 	my $dxchan = DXChannel->get_by_cnum($conn); # get the dxconnnect object for this message
 	
-	if (defined $err && $err) {
+	if (!defined $msg || (defined $err && $err)) {
 		if ($dxchan) {
 			$dxchan->disconnect;
+		} elsif ($conn) {
+			$conn->disconnect;
 		}
 		return;
 	}
@@ -369,11 +371,17 @@ dbg('local', "Local::init error $@") if $@;
 # this, such as it is, is the main loop!
 print "orft we jolly well go ...\n";
 dbg('chan', "DXSpider version $version started...");
+
+open(DB::OUT, "|tee /tmp/aa");
+
 for (;;) {
 	my $timenow;
+	$DB::trace = 1;
+	
 	Msg->event_loop(1, 0.1);
 	$timenow = time;
 	process_inqueue();			# read in lines from the input queue and despatch them
+	$DB::trace = 0;
 	
 	# do timed stuff, ongoing processing happens one a second
 	if ($timenow != $systime) {
